# DjangoTestApp

./: .gitignore  README.md  pyproject.toml
djangotestapp/blog/: admin.py  forms.py  urls.py  views.py
djangotestapp/blog/migrations/: 0001_initial.py
djangotestapp/blog/templates/: blog_category.html  blog_detail.html  blog_index.html
djangotestapp/hello_world/: views.py
djangotestapp/notes/: settings.py
djangotestapp/projects/: models.py  views.py
djangotestapp/projects/migrations/: 0001_initial.py  0002_alter_project_image.py
djangotestapp/projects/templates/: project_index.html
djangotestapp/testapp/: settings.py  urls.py
djangotestapp/testapp/templates/: base.html
tests/: test_djangotestapp.py
